--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,20 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
 	implementation 'org.liquibase:liquibase-core'
+	
 	compileOnly 'org.projectlombok:lombok'
-	compile 'org.modelmapper:modelmapper:1.1.0'
-	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
+	
+	compile 'org.modelmapper:modelmapper:1.1.0'
+
+	testImplementation 'com.h2database:h2'
+	runtimeOnly 'org.postgresql:postgresql'
+	
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	
 }
