--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+    "angular2-toaster": "^7.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ngx-cookie-service": "^2.1.0",
+    "ngx-cookie-service": "^2.2.0",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
+    "toastr": "^2.1.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
