--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,15 @@
+buildscript {
+	ext {
+		metaModelsSourcesDir = file("metamodels")
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.1.5.RELEASE'
 	id 'java'
-}
 
+}
+apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.innowise'
@@ -15,11 +22,50 @@ configurations {
 	}
 }
 
+configurations {
+	querydslapt
+}
+
+sourceSets {
+	main {
+		java {
+			srcDir metaModelsSourcesDir
+		}
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
+
+task querymodels(type: JavaCompile, group: 'build') {
+	doFirst {
+		delete metaModelsSourcesDir;
+		metaModelsSourcesDir.mkdirs();
+	}
+
+	classpath = configurations.compile + configurations.querydslapt
+	destinationDir = metaModelsSourcesDir
+
+	source = sourceSets.main.java
+	options.compilerArgs = [
+			"-proc:only",
+			"-processor", "com.querydsl.apt.jpa.JPAAnnotationProcessor",
+			"-s", metaModelsSourcesDir
+	]
+}
+
+idea {
+	module {
+		sourceDirs += file('generated/')
+		generatedSourceDirs += file('generated/')
+	}
+}
+
+
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -28,14 +74,17 @@ dependencies {
 	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	
+
 	compile 'org.modelmapper:modelmapper:1.1.0'
 
-	testImplementation 'com.h2database:h2'
+	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
-	
-	
+
+	compile "com.querydsl:querydsl-core:4.1.4"
+	compile "com.querydsl:querydsl-jpa:4.1.4"
+	querydslapt "com.querydsl:querydsl-apt:4.1.4"
 }
+
