--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,13 @@
-buildscript {
-	ext {
-		metaModelsSourcesDir = file("metamodels")
-	}
-}
-
 plugins {
 	id 'org.springframework.boot' version '2.1.5.RELEASE'
 	id 'java'
 
 }
+
 apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
+
+
 
 group = 'com.innowise'
 version = '0.0.1-SNAPSHOT'
@@ -22,52 +19,29 @@ configurations {
 	}
 }
 
-configurations {
-	querydslapt
-}
-
-sourceSets {
-	main {
-		java {
-			srcDir metaModelsSourcesDir
-		}
-	}
-}
-
 repositories {
 	mavenCentral()
 }
 
 
-task querymodels(type: JavaCompile, group: 'build') {
-	doFirst {
-		delete metaModelsSourcesDir;
-		metaModelsSourcesDir.mkdirs();
-	}
-
-	classpath = configurations.compile + configurations.querydslapt
-	destinationDir = metaModelsSourcesDir
-
-	source = sourceSets.main.java
-	options.compilerArgs = [
-			"-proc:only",
-			"-processor", "com.querydsl.apt.jpa.JPAAnnotationProcessor",
-			"-s", metaModelsSourcesDir
-	]
-}
-
 idea {
 	module {
 		sourceDirs += file('generated/')
-		generatedSourceDirs += file('generated/')
 	}
 }
 
+sourceSets {
+	generated
+}
+sourceSets.generated.java.srcDirs = ['src/main/java/generated']
+configurations {
+	querydslapt
+}
 
 dependencies {
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
 	implementation 'org.liquibase:liquibase-core'
@@ -83,8 +57,32 @@ dependencies {
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 
-	compile "com.querydsl:querydsl-core:4.1.4"
 	compile "com.querydsl:querydsl-jpa:4.1.4"
-	querydslapt "com.querydsl:querydsl-apt:4.1.4"
+	compile "com.querydsl:querydsl-apt:4.1.4:jpa"
 }
 
+task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
+	source = sourceSets.main.java
+	classpath = configurations.compile + configurations.querydslapt
+	options.compilerArgs = [
+			"-proc:only",
+			"-processor", "com.mysema.query.apt.jpa.JPAAnnotationProcessor"
+	]
+	destinationDir = sourceSets.generated.java.srcDirs.iterator().next()
+}
+
+compileJava {
+	dependsOn generateQueryDSL
+	source generateQueryDSL.destinationDir
+}
+
+compileGeneratedJava {
+	dependsOn generateQueryDSL
+	classpath += sourceSets.main.runtimeClasspath
+}
+
+task getHomeDir {
+	doLast {
+		println gradle.gradleHomeDir
+	}
+}
