--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,22 @@
+buildscript {
+	repositories {
+		mavenLocal()
+		mavenCentral()
+	}
+	dependencies {
+		classpath 'org.liquibase:liquibase-gradle-plugin:2.0.1'
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.1.5.RELEASE'
 	id 'java'
+	id "org.liquibase.gradle" version "2.0.1"
 }
 
 apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
-
+apply plugin: 'liquibase'
 
 group = 'com.innowise'
 version = '0.0.1-SNAPSHOT'
@@ -34,6 +45,8 @@ sourceSets {
 sourceSets.generated.java.srcDirs = ['src/main/java/generated']
 configurations {
 	querydslapt
+	liquibaseRuntime
+	sqlDriver
 }
 
 dependencies {
@@ -41,9 +54,6 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	
-	implementation 'org.liquibase:liquibase-core'
-
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -60,7 +70,20 @@ dependencies {
 	compile "com.querydsl:querydsl-apt:4.1.4:jpa"
 
 	testCompile("org.testcontainers:postgresql:1.7.3")
+
+	sqlDriver 'postgresql:postgresql:9.1-901-1.jdbc4'
+
+	liquibaseRuntime 'org.postgresql:postgresql:9.4.1211.jre7'
+	liquibaseRuntime 'org.liquibase:liquibase-core:3.6.3'
+	liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.0.1'
+	liquibaseRuntime 'ch.qos.logback:logback-core:1.2.3'
+	liquibaseRuntime 'ch.qos.logback:logback-classic:1.2.3'
 }
+
+def serverHttpPort = project.properties['server.port']
+def dbUser = project.properties['spring.datasource.username']
+def dbPassword = project.properties['spring.datasource.password']
+def dbUrl = project.properties['spring.datasource.url']
 
 task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
 	source = sourceSets.main.java
@@ -86,4 +109,36 @@ task getHomeDir {
 	doLast {
 		println gradle.gradleHomeDir
 	}
+}
+
+task insertTestData(type: JavaExec) {
+	group = "Liquibase"
+	classpath  configurations.liquibaseRuntime
+	main = "liquibase.integration.commandline.Main"
+	args "--changeLogFile=src/main/resources/changelog/dev/0002_insert_data.xml"
+	args "--username=postgres"
+	args "--password=54321"
+	args "--url=jdbc:postgresql://localhost:5432/postgres"
+	args "--defaultSchemaName=employee_schema"
+	args "--driver=org.postgresql.Driver"
+	args "update"
+}
+
+
+liquibase {
+	activities {
+		main {
+			changeLogFile 'src/main/resources/changelog/db.changelog-master.xml'
+			url dbUrl
+			username dbUser
+			password dbPassword
+		}
+		test{
+			changeLogFile 'src/main/resources/changelog/db.changelog-master.xml'
+			url dbUrl
+			username dbUser
+			password dbPassword
+		}
+	}
+	runList = 'main, test'
 }
