--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'idea'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'liquibase'
 
-import groovy.sql.Sql
 
 
 group = 'com.innowise'
@@ -48,7 +47,6 @@ sourceSets {
 sourceSets.generated.java.srcDirs = ['src/main/java/generated']
 
 configurations {
-	jdbc
 	querydslapt
 }
 
@@ -71,7 +69,6 @@ dependencies {
 	compile "com.querydsl:querydsl-jpa:4.1.4"
 	compile "com.querydsl:querydsl-apt:4.1.4:jpa"
 
-	jdbc 'org.postgresql:postgresql:42.2.5'
 	liquibaseRuntime 'org.postgresql:postgresql:9.4.1211.jre7'
 	liquibaseRuntime 'org.liquibase:liquibase-core:3.6.3'
 	liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.0.1'
@@ -106,45 +103,31 @@ task getHomeDir {
 }
 
 
-def props = [user: 'myuser', password: '123'] as Properties
-def urldb = "jdbc:postgresql://localhost:5432/mydb"
-def driver = 'org.postgresql.Driver'
-def sql = Sql.newInstance(urldb, props, driver)
-def sqlClassLoader = Sql.classLoader
-configurations.jdbc.each { sqlClassLoader.addURL it.toURI().toURL() }
 
-task insertData {
-	doLast {
-        String sqlString = file('src/main/resources/insert_data.sql').text
-        println(sqlString)
-        sql.execute(sqlString)
-    }
+task insertData(type: JavaExec) {
+	group = "Liquibase"
+	classpath configurations.liquibaseRuntime
+	main = "liquibase.integration.commandline.Main"
+	args "--changeLogFile=src/main/resources/changelog/scripts/v.01/insert_data.sql"
+	args "--username=myuser"
+	args "--password=123"
+	args "--url=jdbc:postgresql://localhost:5432/mydb"
+	args "--defaultSchemaName=employee_schema"
+	args "--driver=org.postgresql.Driver"
+	args "update"
 }
 
-task deleteData {
-	doLast {
-        String sqlString = file('src/main/resources/delete_data.sql').text
-        println(sqlString)
-		sql.execute(sqlString)
-	}
-}
-
-task dropSchemes{
-	doLast {
-		String sqlString = 'DROP SCHEMA employee_schema CASCADE'
-		sql.execute(sqlString)
-		String sqlStringTest = 'DROP SCHEMA employee_schema_test CASCADE'
-		sql.execute(sqlStringTest)
-	}
-}
-
-task createSchemes{
-	doLast {
-		String sqlString = 'CREATE SCHEMA employee_schema '
-		sql.execute(sqlString)
-		String sqlStringTest = 'CREATE SCHEMA employee_schema_test '
-		sql.execute(sqlStringTest)
-	}
+task deleteData(type: JavaExec) {
+	group = "Liquibase"
+	classpath configurations.liquibaseRuntime
+	main = "liquibase.integration.commandline.Main"
+	args "--changeLogFile=src/main/resources/changelog/scripts/v.01/delete_data.sql"
+	args "--username=myuser"
+	args "--password=123"
+	args "--url=jdbc:postgresql://localhost:5432/mydb"
+	args "--defaultSchemaName=employee_schema"
+	args "--driver=org.postgresql.Driver"
+	args "update"
 }
 
 
@@ -158,15 +141,13 @@ liquibase {
 			password '123'
 		}
 		test{
-			changeLogFile 'src/main/resources/changelog/db.changelog-master.xml'
+			changeLogFile changeLog
 			url 'jdbc:postgresql://localhost:5432/mydb?currentSchema=employee_schema_test'
 			username 'myuser'
 			password '123'
 		}
 	}
-    runList = 'main, test'
+	runList="$item"
 }
-
-
 
 
